// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignment 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
x
'something'
x = 'something'",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`assignment of conditional expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "label": "true",
      "to": "1,1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,2",
      "label": "false",
      "to": "1,2",
    },
    Object {
      "arrows": "to",
      "from": "1,1",
      "id": "1,1-1,1,1",
      "to": "1,1,1",
    },
    Object {
      "arrows": "to",
      "from": "1,1,1",
      "id": "1,1,1-1,1,1,1",
      "to": "1,1,1,1",
    },
    Object {
      "arrows": "to",
      "from": "1,2",
      "id": "1,2-1,1,1",
      "to": "1,1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "1,1
c",
      "physics": false,
    },
    Object {
      "id": "1,1,1",
      "label": "1,1,1
a = b ? c : d",
      "physics": false,
    },
    Object {
      "id": "1,1,1,1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1,2",
      "label": "1,2
d",
      "physics": false,
    },
  ],
}
`;

exports[`call expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
a()",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`call expression with parameters 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b
a(b)",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`call expression with parameters 2`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a
b
c
a(b, c)",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`conditional expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "label": "true",
      "to": "1,1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,2",
      "label": "false",
      "to": "1,2",
    },
    Object {
      "arrows": "to",
      "from": "1,1",
      "id": "1,1-1,1,1",
      "to": "1,1,1",
    },
    Object {
      "arrows": "to",
      "from": "1,2",
      "id": "1,2-1,1,1",
      "to": "1,1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "1,1
b",
      "physics": false,
    },
    Object {
      "id": "1,1,1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1,2",
      "label": "1,2
c",
      "physics": false,
    },
  ],
}
`;

exports[`empty block 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`identifier expression 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`if statement 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "label": "true",
      "to": "1,1",
    },
    Object {
      "arrows": "to",
      "from": "1,1",
      "id": "1,1-1,1,1",
      "to": "1,1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "1,1
b",
      "physics": false,
    },
    Object {
      "id": "1,1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`if statement 2`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "label": "true",
      "to": "1,1",
    },
    Object {
      "arrows": "to",
      "from": "1,1",
      "id": "1,1-1,1,1",
      "to": "1,1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "1,1
b",
      "physics": false,
    },
    Object {
      "id": "1,1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`if statement 3`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "label": "true",
      "to": "1,1",
    },
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,2",
      "label": "false",
      "to": "1,2",
    },
    Object {
      "arrows": "to",
      "from": "1,1",
      "id": "1,1-1,1,1",
      "to": "1,1,1",
    },
    Object {
      "arrows": "to",
      "from": "1,2",
      "id": "1,2-1,1,1",
      "to": "1,1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
a",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "1,1
b",
      "physics": false,
    },
    Object {
      "id": "1,1,1",
      "label": "END",
      "physics": false,
    },
    Object {
      "id": "1,2",
      "label": "1,2
c",
      "physics": false,
    },
  ],
}
`;

exports[`literals 1`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
'literal'",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;

exports[`literals 2`] = `
Object {
  "edges": Array [
    Object {
      "arrows": "to",
      "from": "1",
      "id": "1-1,1",
      "to": "1,1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "1",
      "label": "1
START
1",
      "physics": false,
    },
    Object {
      "id": "1,1",
      "label": "END",
      "physics": false,
    },
  ],
}
`;
